Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -143,6 +143,8 @@ Error message and password prompt
 
 <li>$:/core</li>
 
+<li>$:/DefaultTiddlers</li>
+
 <li>$:/GitHub/Branch</li>
 
 <li>$:/GitHub/Filename</li>
@@ -170,6 +172,8 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>Intro</li>
 
 </ul>
 </p>
@@ -10049,6 +10053,9 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20210314001625615" modified="20210314001631238" title="$:/DefaultTiddlers">
+<pre>Intro</pre>
+</div>
 <div created="20210314001310288" modified="20210314001310719" title="$:/GitHub/Branch">
 <pre>main</pre>
 </div>
@@ -10082,7 +10089,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210314001121519" list="$:/ControlPanel GettingStarted" modified="20210314001121519" title="$:/StoryList">
+<div created="20210314001633557" list="$:/ControlPanel Intro GettingStarted" modified="20210314001633557" title="$:/StoryList">
 <pre></pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
@@ -10193,6 +10200,13 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20210314001431034" modified="20210314001620767" tags="" title="Intro" type="text/vnd.tiddlywiki">
+<pre>!! Projects
+* Untitled Erotic Dungeon Designer Game
+
+!!! Abandoned Projects
+* miia-web</pre>
 </div>
 
 
