--- a/index.html
+++ b/index.html
@@ -141,6 +141,32 @@ Error message and password prompt
 
 <p>This <a class="tc-tiddlylink-external" href="https://tiddlywiki.com" rel="noopener noreferrer" target="_blank">TiddlyWiki</a> contains the following tiddlers:</p><p><ul>
 
+<li>$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/subscript</li>
+
+<li>$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/superscript</li>
+
+<li>$:/config/NewJournal/Title</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview</li>
+
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/save-wiki</li>
+
+<li>$:/config/RelinkOnRename</li>
+
+<li>$:/config/Toolbar/ButtonClass</li>
+
+<li>$:/config/Toolbar/Text</li>
+
+<li>$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/edit</li>
+
 <li>$:/core</li>
 
 <li>$:/DefaultTiddlers</li>
@@ -161,13 +187,23 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/tab--1963855381</li>
+
+<li>$:/state/tab--2112689675</li>
+
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
 
+<li>$:/state/tab/sidebar--595412856</li>
+
+<li>$:/state/tabs/controlpanel/toolbars-1345989671</li>
+
 <li>$:/status/RequireReloadDueToPluginChange</li>
 
 <li>$:/StoryList</li>
+
+<li>$:/theme</li>
 
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
@@ -175,7 +211,7 @@ Error message and password prompt
 
 <li>Intro</li>
 
-<li>project/miia-web</li>
+<li>miia-web</li>
 
 </ul>
 </p>
@@ -191,6 +227,45 @@ Error message and password prompt
 <!--~~ Ordinary tiddlers ~~-->
 
 <div id="storeArea" style="display:none;">
+<div created="20210314002016609" modified="20210314002016609" title="$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/subscript">
+<pre>hide</pre>
+</div>
+<div created="20210314002016218" modified="20210314002016218" title="$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/superscript">
+<pre>hide</pre>
+</div>
+<div created="20210314001912261" modified="20210314001916518" title="$:/config/NewJournal/Title">
+<pre>YYYYYYYY MMM DDth </pre>
+</div>
+<div created="20210314002000049" modified="20210314002000049" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
+<pre>show</pre>
+</div>
+<div created="20210314001944766" modified="20210314001944766" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel">
+<pre>hide</pre>
+</div>
+<div created="20210314001957560" modified="20210314001957560" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/home">
+<pre>show</pre>
+</div>
+<div created="20210314001945940" modified="20210314001945940" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler">
+<pre>hide</pre>
+</div>
+<div created="20210314002002587" modified="20210314002002587" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview">
+<pre>show</pre>
+</div>
+<div created="20210314001948299" modified="20210314001948299" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/save-wiki">
+<pre>hide</pre>
+</div>
+<div created="20210314002158564" modified="20210314002158564" title="$:/config/RelinkOnRename">
+<pre>yes</pre>
+</div>
+<div created="20210314002128418" modified="20210314002138739" title="$:/config/Toolbar/ButtonClass">
+<pre>tc-btn-boxed</pre>
+</div>
+<div created="20210314002146725" modified="20210314002146725" title="$:/config/Toolbar/Text">
+<pre>yes</pre>
+</div>
+<div created="20210314002038894" modified="20210314002038894" title="$:/config/ViewToolbarButtons/Visibility/$:/core/ui/Buttons/edit">
+<pre>hide</pre>
+</div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="" description="TiddlyWiki5 core" list="readme" name="Core" plugin-priority="0" plugin-type="plugin" title="$:/core" type="application/json" version="5.1.23">
 <pre>{
     &quot;tiddlers&quot;: {
@@ -10082,17 +10157,32 @@ Error message and password prompt
 <div created="20210314001100096" modified="20210314001101182" title="$:/SiteTitle">
 <pre>dpongimo</pre>
 </div>
-<div created="20210314001123268" modified="20210314001123268" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210314001932595" modified="20210314002048060" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20210314001126171" modified="20210314001333158" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/GitHub</pre>
+<div created="20210314001923135" modified="20210314001923135" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Advanced</pre>
+</div>
+<div created="20210314001123268" modified="20210314002112916" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Settings</pre>
+</div>
+<div created="20210314001126171" modified="20210314002109104" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
+</div>
+<div created="20210314001939532" modified="20210314001939532" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
+</div>
+<div created="20210314001934197" modified="20210314002031646" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
 </div>
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="project/miia-web Intro" title="$:/StoryList">
+<div created="20210314001851799" list="$:/ControlPanel miia-web Intro" modified="20210314002143497" title="$:/StoryList">
 <pre></pre>
+</div>
+<div created="20210314001928012" modified="20210314001930640" title="$:/theme">
+<pre>$:/themes/tiddlywiki/vanilla</pre>
 </div>
 <div author="JeremyRuston" core-version="&gt;=5.0.0" dependents="$:/themes/tiddlywiki/vanilla" description="Emphasises individual tiddlers" name="Snow White" plugin-priority="0" plugin-type="theme" title="$:/themes/tiddlywiki/snowwhite" type="application/json" version="5.1.23">
 <pre>{
@@ -10210,7 +10300,7 @@ Error message and password prompt
 !!! Abandoned Projects
 * miia-web</pre>
 </div>
-<div created="20210314001736999" modified="20210314001841571" tags="" title="project/miia-web" type="text/vnd.tiddlywiki">
+<div created="20210314001736999" modified="20210314002200179" tags="" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>test</pre>
 </div>
 
