--- a/index.html
+++ b/index.html
@@ -10178,7 +10178,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210314001851799" list="$:/ControlPanel miia-web Intro" modified="20210314002143497" title="$:/StoryList">
+<div created="20210314001851799" list="Intro" modified="20210314002143497" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10293,12 +10293,12 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210314001431034" modified="20210314001620767" tags="" title="Intro" type="text/vnd.tiddlywiki">
+<div created="20210314001431034" modified="20210314002224657" tags="" title="Intro" type="text/vnd.tiddlywiki">
 <pre>!! Projects
 * Untitled Erotic Dungeon Designer Game
 
 !!! Abandoned Projects
-* miia-web</pre>
+* [[miia-web]]</pre>
 </div>
 <div created="20210314001736999" modified="20210314002200179" tags="" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>test</pre>
