--- a/index.html
+++ b/index.html
@@ -155,11 +155,17 @@ Error message and password prompt
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/palette</li>
+
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/save-wiki</li>
 
+<li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme</li>
+
 <li>$:/config/RelinkOnRename</li>
+
+<li>$:/config/TimestampDisable</li>
 
 <li>$:/config/Toolbar/ButtonClass</li>
 
@@ -183,9 +189,13 @@ Error message and password prompt
 
 <li>$:/isEncrypted</li>
 
+<li>$:/palette</li>
+
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/showeditpreview</li>
 
 <li>$:/state/tab--1963855381</li>
 
@@ -194,6 +204,8 @@ Error message and password prompt
 <li>$:/state/tab-1749438307</li>
 
 <li>$:/state/tab-2065006209</li>
+
+<li>$:/state/tab/moresidebar-1850697562</li>
 
 <li>$:/state/tab/sidebar--595412856</li>
 
@@ -212,6 +224,8 @@ Error message and password prompt
 <li>Intro</li>
 
 <li>miia-web</li>
+
+<li>Untitled Erotic Dungeon Designer Game</li>
 
 </ul>
 </p>
@@ -236,8 +250,8 @@ Error message and password prompt
 <div created="20210314001912261" modified="20210314001916518" title="$:/config/NewJournal/Title">
 <pre>YYYYYYYY MMM DDth </pre>
 </div>
-<div created="20210314002000049" modified="20210314002000049" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
-<pre>show</pre>
+<div created="20210314002000049" modified="20210314002906018" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all">
+<pre>hide</pre>
 </div>
 <div created="20210314001944766" modified="20210314001944766" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/control-panel">
 <pre>hide</pre>
@@ -248,14 +262,23 @@ Error message and password prompt
 <div created="20210314001945940" modified="20210314001945940" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/new-tiddler">
 <pre>hide</pre>
 </div>
+<div created="20210314002330312" modified="20210314002354736" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/palette">
+<pre>hide</pre>
+</div>
 <div created="20210314002002587" modified="20210314002002587" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/permaview">
 <pre>show</pre>
 </div>
 <div created="20210314001948299" modified="20210314001948299" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/save-wiki">
 <pre>hide</pre>
 </div>
+<div created="20210314002327553" modified="20210314002328413" title="$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme">
+<pre>hide</pre>
+</div>
 <div created="20210314002158564" modified="20210314002158564" title="$:/config/RelinkOnRename">
 <pre>yes</pre>
+</div>
+<div created="20210314002856733" modified="20210314002856733" title="$:/config/TimestampDisable">
+<pre>no</pre>
 </div>
 <div created="20210314002128418" modified="20210314002138739" title="$:/config/Toolbar/ButtonClass">
 <pre>tc-btn-boxed</pre>
@@ -10151,11 +10174,17 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
+<div created="20210314002334076" modified="20210314002342647" title="$:/palette">
+<pre>$:/palettes/Twilight</pre>
+</div>
 <div created="20210314001105062" modified="20210314001110621" title="$:/SiteSubtitle">
 <pre>game design blog</pre>
 </div>
 <div created="20210314001100096" modified="20210314001101182" title="$:/SiteTitle">
 <pre>dpongimo</pre>
+</div>
+<div created="20210314002548383" modified="20210314002548383" title="$:/state/showeditpreview">
+<pre>yes</pre>
 </div>
 <div created="20210314001932595" modified="20210314002048060" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
@@ -10169,8 +10198,11 @@ Error message and password prompt
 <div created="20210314001126171" modified="20210314002109104" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
 </div>
-<div created="20210314001939532" modified="20210314001939532" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20210314002921816" modified="20210314002924143" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/All</pre>
+</div>
+<div created="20210314001939532" modified="20210314002918743" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20210314001934197" modified="20210314002031646" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -10178,7 +10210,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210314001851799" list="Intro miia-web" modified="20210314002225826" title="$:/StoryList">
+<div created="20210314001851799" list="Intro [[Untitled Erotic Dungeon Designer Game]] miia-web" modified="20210314002243836" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10302,6 +10334,13 @@ Error message and password prompt
 </div>
 <div created="20210314001736999" modified="20210314002200179" tags="" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>test</pre>
+</div>
+<div created="20210314002255824" modified="20210314002926345" tags="games [[game ideas]]" title="Untitled Erotic Dungeon Designer Game" type="text/vnd.tiddlywiki">
+<pre>[[Unitled Erotic Dungeon Designer Game]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
+
+Players take the role of an unwitting slave to a recently awoken god of lust seeking humans to create a unique dungeon.
+
+[[Unitled Erotic Dungeon Designer Game]] will </pre>
 </div>
 
 
