--- a/index.html
+++ b/index.html
@@ -195,6 +195,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/Link/-87203796/search</li>
+
 <li>$:/state/showeditpreview</li>
 
 <li>$:/state/tab--1963855381</li>
@@ -10183,6 +10185,9 @@ Error message and password prompt
 <div created="20210314001100096" modified="20210314001101182" title="$:/SiteTitle">
 <pre>dpongimo</pre>
 </div>
+<div created="20210314004018200" modified="20210314004020590" title="$:/state/Link/-87203796/search">
+<pre></pre>
+</div>
 <div created="20210314002548383" modified="20210314002548383" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
@@ -10201,8 +10206,8 @@ Error message and password prompt
 <div created="20210314002921816" modified="20210314002924143" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/All</pre>
 </div>
-<div created="20210314001939532" modified="20210314002918743" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20210314001939532" modified="20210314003207235" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20210314001934197" modified="20210314002031646" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -10332,8 +10337,15 @@ Error message and password prompt
 !!! Abandoned Projects
 * [[miia-web]]</pre>
 </div>
-<div created="20210314001736999" modified="20210314002200179" tags="" title="miia-web" type="text/vnd.tiddlywiki">
-<pre>test</pre>
+<div created="20210314001736999" modified="20210314004410364" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
+<pre>Miia Web was an browser based client for the [[Hydrus Network Client|https://hydrusnetwork.github.io/hydrus/]]. 
+
+https://github.com/dpongimo/miia-web
+
+It was designed to utilize the [[Hydrus Client API|https://hydrusnetwork.github.io/hydrus/help/client_api.html]] and act both as a mobile image viewer and as an offline booru browser. It utilized both a local Indexed DB and image cache to actively store images for viewing offline. It used [[Sapper|https://sapper.svelte.dev/]] and [[Svelte|https://svelte.dev/]] for page rendering and routing.
+
+Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another progressive web app client for Hydrus improved. The website, [[miia.website|https://miia.website]] will expire in July of 2021.
+</pre>
 </div>
 <div created="20210314002255824" modified="20210314002926345" tags="games [[game ideas]]" title="Untitled Erotic Dungeon Designer Game" type="text/vnd.tiddlywiki">
 <pre>[[Unitled Erotic Dungeon Designer Game]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
