Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -227,8 +227,6 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
-<li>Draft of 'miia-web'</li>
-
 <li>Intro</li>
 
 <li>miia-web</li>
@@ -10231,7 +10229,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210314001851799" list="$:/Import Intro [[Untitled Erotic Dungeon Designer Game]] [[Draft of 'miia-web']]" modified="20210314002243836" title="$:/StoryList">
+<div created="20210314001851799" list="$:/Import Intro [[Untitled Erotic Dungeon Designer Game]] miia-web" modified="20210314002243836" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10346,18 +10344,6 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210314001736999" draft.of="miia-web" draft.title="miia-web" modified="20210314004504170" tags="[[open source]] abandoned" title="Draft of 'miia-web'" type="text/vnd.tiddlywiki">
-<pre>Miia Web was an browser based client for the [[Hydrus Network Client|https://hydrusnetwork.github.io/hydrus/]]. 
-
-
-
-https://github.com/dpongimo/miia-web
-
-It was designed to utilize the [[Hydrus Client API|https://hydrusnetwork.github.io/hydrus/help/client_api.html]] and act both as a mobile image viewer and as an offline booru browser. It utilized both a local Indexed DB and image cache to actively store images for viewing offline. It used [[Sapper|https://sapper.svelte.dev/]] and [[Svelte|https://svelte.dev/]] for page rendering and routing.
-
-Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another progressive web app client for Hydrus improved. The website, [[miia.website|https://miia.website]] will expire in July of 2021.
-</pre>
-</div>
 <div created="20210314001431034" modified="20210314002238774" tags="" title="Intro" type="text/vnd.tiddlywiki">
 <pre>!! Projects
 * [[Untitled Erotic Dungeon Designer Game]]
@@ -10365,8 +10351,10 @@ Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another prog
 !!! Abandoned Projects
 * [[miia-web]]</pre>
 </div>
-<div created="20210314001736999" modified="20210314004410364" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
+<div created="20210314001736999" modified="20210314004612264" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>Miia Web was an browser based client for the [[Hydrus Network Client|https://hydrusnetwork.github.io/hydrus/]]. 
+
+[img[miia-website-main.png]]
 
 https://github.com/dpongimo/miia-web
 
