--- a/index.html
+++ b/index.html
@@ -10369,8 +10369,10 @@ Error message and password prompt
 <div created="20210314010052447" modified="20210314010055542" title="$:/view">
 <pre>classic</pre>
 </div>
-<div created="20210314001431034" modified="20210314005526127" tags="" title="dpongimo" type="text/vnd.tiddlywiki">
-<pre>!! Projects
+<div created="20210314001431034" modified="20210314010546296" tags="" title="dpongimo" type="text/vnd.tiddlywiki">
+<pre>This blog is a loose collection of thoughts and projects.
+
+!! Projects
 * [[Untitled Erotic Dungeon Designer Game]]
 
 !!! Abandoned Projects
