--- a/index.html
+++ b/index.html
@@ -10429,11 +10429,11 @@ Error message and password prompt
 <div created="20210314010052447" modified="20210314010055542" title="$:/view">
 <pre>classic</pre>
 </div>
-<div created="20210314001431034" modified="20210314010546296" tags="" title="dpongimo" type="text/vnd.tiddlywiki">
+<div created="20210314001431034" modified="20210314012027252" tags="" title="dpongimo" type="text/vnd.tiddlywiki">
 <pre>This blog is a loose collection of thoughts and projects.
 
 !! Projects
-* [[Untitled Erotic Dungeon Designer Game]]
+* [[Dreamy Dungeon]]
 
 !!! Abandoned Projects
 * [[miia-web]]</pre>
