--- a/index.html
+++ b/index.html
@@ -10203,8 +10203,8 @@ Error message and password prompt
     }
 }</pre>
 </div>
-<div created="20210314001625615" modified="20210314001631238" title="$:/DefaultTiddlers">
-<pre>Intro</pre>
+<div created="20210314001625615" modified="20210314012300956" title="$:/DefaultTiddlers">
+<pre>[[NSFW Warning]]</pre>
 </div>
 <div created="20210314001310288" modified="20210314001310719" title="$:/GitHub/Branch">
 <pre>main</pre>
@@ -10253,11 +10253,11 @@ Error message and password prompt
 <div created="20210314001932595" modified="20210314010056775" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20210314001923135" modified="20210314001923135" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Advanced</pre>
+<div created="20210314001923135" modified="20210314012256914" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Basics</pre>
 </div>
-<div created="20210314001123268" modified="20210314010105106" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/KeyboardShortcuts</pre>
+<div created="20210314001123268" modified="20210314012256083" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
 <div created="20210314001126171" modified="20210314002109104" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
@@ -10265,8 +10265,8 @@ Error message and password prompt
 <div created="20210314002921816" modified="20210314011008100" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Explorer</pre>
 </div>
-<div created="20210314001939532" modified="20210314010958259" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/More</pre>
+<div created="20210314001939532" modified="20210314012248537" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/Tools</pre>
 </div>
 <div created="20210314001934197" modified="20210314005941648" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -10310,7 +10310,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div list="[[NSFW Warning]]" title="$:/StoryList">
+<div created="20210314012252778" list="$:/ControlPanel [[NSFW Warning]]" modified="20210314012252778" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
