--- a/index.html
+++ b/index.html
@@ -10262,11 +10262,11 @@ Error message and password prompt
 <div created="20210314001126171" modified="20210314002109104" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
 </div>
-<div created="20210314002921816" modified="20210314011008100" title="$:/state/tab/moresidebar-1850697562">
-<pre>$:/core/ui/MoreSideBar/Explorer</pre>
+<div created="20210314002921816" modified="20210314012411570" title="$:/state/tab/moresidebar-1850697562">
+<pre>$:/core/ui/MoreSideBar/Orphans</pre>
 </div>
-<div created="20210314001939532" modified="20210314012248537" title="$:/state/tab/sidebar--595412856">
-<pre>$:/core/ui/SideBar/Tools</pre>
+<div created="20210314001939532" modified="20210314012409702" title="$:/state/tab/sidebar--595412856">
+<pre>$:/core/ui/SideBar/More</pre>
 </div>
 <div created="20210314001934197" modified="20210314005941648" title="$:/state/tabs/controlpanel/toolbars-1345989671">
 <pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
@@ -10310,7 +10310,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210314012252778" list="$:/ControlPanel [[NSFW Warning]]" modified="20210314012252778" title="$:/StoryList">
+<div created="20210314012406019" list="[[Dreamy Dungeon]] [[NSFW Warning]] dpongimo" modified="20210314012413033" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10431,11 +10431,11 @@ Error message and password prompt
 <div created="20210314010052447" modified="20210314010055542" title="$:/view">
 <pre>classic</pre>
 </div>
-<div created="20210314001431034" modified="20210314010546296" tags="" title="dpongimo" type="text/vnd.tiddlywiki">
+<div created="20210314001431034" modified="20210314012427091" tags="" title="dpongimo" type="text/vnd.tiddlywiki">
 <pre>This blog is a loose collection of thoughts and projects.
 
 !! Projects
-* [[Untitled Erotic Dungeon Designer Game]]
+* [[Dreamy Dungeon]]
 
 !!! Abandoned Projects
 * [[miia-web]]</pre>
