Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -10440,12 +10440,12 @@ Error message and password prompt
 !!! Abandoned Projects
 * [[miia-web]]</pre>
 </div>
-<div color="#400080" created="20210314002255824" modified="20210314012015962" tags="games [[game ideas]]" title="Dreamy Dungeon" type="text/vnd.tiddlywiki" version="">
-<pre>[[Untitled Erotic Dungeon Designer Game]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
+<div color="#400080" created="20210314002255824" modified="20210314012451164" tags="games [[game ideas]]" title="Dreamy Dungeon" type="text/vnd.tiddlywiki" version="">
+<pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
 
 It's currently in the early design phase with a focus on creating full game design document and compelling game loop before starting development. 
 
-[[</pre>
+[[DreamyDungeon/Overview]]</pre>
 </div>
 <div created="20210314001736999" modified="20210314004612264" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>Miia Web was an browser based client for the [[Hydrus Network Client|https://hydrusnetwork.github.io/hydrus/]]. 
