Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -201,6 +201,8 @@ Error message and password prompt
 
 <li>$:/SiteTitle</li>
 
+<li>$:/state/edit/references--247287909</li>
+
 <li>$:/state/image-picker/system--30539526</li>
 
 <li>$:/state/Link/-87203796/search</li>
@@ -263,7 +265,7 @@ Error message and password prompt
 
 <li>dpongimo</li>
 
-<li>Dreamy Dungeon</li>
+<li>DreamyDungeon</li>
 
 <li>miia-web</li>
 
@@ -10238,6 +10240,9 @@ Error message and password prompt
 <div created="20210314001100096" modified="20210314001101182" title="$:/SiteTitle">
 <pre>dpongimo</pre>
 </div>
+<div created="20210314012457924" modified="20210314012458542" title="$:/state/edit/references--247287909">
+<pre>hide</pre>
+</div>
 <div created="20210314004516876" modified="20210314004517504" title="$:/state/image-picker/system--30539526">
 <pre>hide</pre>
 </div>
@@ -10310,7 +10315,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210314012406019" list="[[Dreamy Dungeon]] [[NSFW Warning]] dpongimo" modified="20210314012413033" title="$:/StoryList">
+<div created="20210314012406019" list="DreamyDungeon [[NSFW Warning]] dpongimo" modified="20210314012413033" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10440,7 +10445,7 @@ Error message and password prompt
 !!! Abandoned Projects
 * [[miia-web]]</pre>
 </div>
-<div color="#400080" created="20210314002255824" modified="20210314012451164" tags="games [[game ideas]]" title="Dreamy Dungeon" type="text/vnd.tiddlywiki" version="">
+<div color="#400080" created="20210314002255824" modified="20210314012549489" name="" tags="games [[game ideas]]" title="DreamyDungeon" type="text/vnd.tiddlywiki" version="">
 <pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
 
 It's currently in the early design phase with a focus on creating full game design document and compelling game loop before starting development. 
