--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ Error message and password prompt
 
 <li>dpongimo</li>
 
-<li>DreamyDungeon</li>
+<li>Dreamy Dungeon</li>
 
 <li>miia-web</li>
 
@@ -10315,7 +10315,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210314012406019" list="DreamyDungeon [[NSFW Warning]] dpongimo" modified="20210314012413033" title="$:/StoryList">
+<div created="20210314012406019" list="[[Dreamy Dungeon]] [[NSFW Warning]] dpongimo" modified="20210314012413033" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10445,12 +10445,12 @@ Error message and password prompt
 !!! Abandoned Projects
 * [[miia-web]]</pre>
 </div>
-<div color="#400080" created="20210314002255824" modified="20210314012549489" name="" tags="games [[game ideas]]" title="DreamyDungeon" type="text/vnd.tiddlywiki" version="">
+<div color="#400080" created="20210314002255824" modified="20210314012607330" name="" tags="games [[game ideas]]" title="Dreamy Dungeon" type="text/vnd.tiddlywiki" version="">
 <pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
 
 It's currently in the early design phase with a focus on creating full game design document and compelling game loop before starting development. 
 
-[[DreamyDungeon/Overview]]</pre>
+[[Dreamy Dungeon/Overview]]</pre>
 </div>
 <div created="20210314001736999" modified="20210314004612264" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>Miia Web was an browser based client for the [[Hydrus Network Client|https://hydrusnetwork.github.io/hydrus/]]. 
