Saved by TiddlyWiki

--- a/index.html
+++ b/index.html
@@ -273,6 +273,8 @@ Error message and password prompt
 
 <li>NSFW Warning</li>
 
+<li>Overview</li>
+
 </ul>
 </p>
 
@@ -10315,7 +10317,7 @@ Error message and password prompt
 <div title="$:/status/RequireReloadDueToPluginChange">
 <pre>no</pre>
 </div>
-<div created="20210314012406019" list="[[Dreamy Dungeon]] [[NSFW Warning]] dpongimo" modified="20210314012413033" title="$:/StoryList">
+<div created="20210314012406019" list="[[Dreamy Dungeon]] Overview dpongimo" modified="20210314012611927" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10471,6 +10473,11 @@ Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another prog
 <pre>This website contains graphic descriptions of sex and shouldn't be viewed by anyone not an adult or under the age of 18 (or regional equivalent).
 
 [[I am an adult|dpongimo]]</pre>
+</div>
+<div created="20210314012630418" modified="20210314013336844" title="Overview">
+<pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
+
+The player assumes the role of an unwitting human summoned by a [[god of lust]] into a fantasy world of heroes and [[dungeons]].</pre>
 </div>
 
 
