--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -10322,7 +10322,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210314013621455" creator="dpongimo" list="[[NSFW Warning]] dpongimo" modified="20210314013621455" modifier="dpongimo" title="$:/StoryList">
+<div created="20210314013621455" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]]" modified="20210314013633844" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10452,12 +10452,16 @@ Error message and password prompt
 !!! Abandoned Projects
 * [[miia-web]]</pre>
 </div>
-<div color="#400080" created="20210314002255824" modified="20210314012607330" name="" tags="games [[game ideas]]" title="Dreamy Dungeon" type="text/vnd.tiddlywiki" version="">
+<div color="#400080" created="20210314002255824" creator="dpongimo" modified="20210314013753360" modifier="dpongimo" tags="games [[game ideas]]" title="Dreamy Dungeon" type="text/vnd.tiddlywiki">
 <pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
 
 It's currently in the early design phase with a focus on creating full game design document and compelling game loop before starting development. 
 
-[[Dreamy Dungeon/Overview]]</pre>
+[[Overview]]
+[[Game Mechanics]]
+[[Extensibility]]
+[[Development]]
+[[Download]]</pre>
 </div>
 <div created="20210314001736999" modified="20210314004612264" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>Miia Web was an browser based client for the [[Hydrus Network Client|https://hydrusnetwork.github.io/hydrus/]]. 
