Saved by TiddlyWiki

--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -10486,10 +10486,10 @@ Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another prog
 
 [[I am an adult|dpongimo]]</pre>
 </div>
-<div created="20210314012630418" modified="20210314013336844" title="Overview">
-<pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon.
+<div created="20210314012630418" creator="dpongimo" modified="20210314014717039" modifier="dpongimo" title="Overview">
+<pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon. Dreamy Dungeon is [[inspired|inspiration]] by many previous games.
 
-The player assumes the role of an unwitting human summoned by a [[god of lust]] into a fantasy world of heroes and [[dungeons]].</pre>
+The [[player]] assumes the role of an unwitting human summoned by a [[god of lust]] into a fantasy world of adventurers and [[dungeons]].</pre>
 </div>
 
 
