--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -145,6 +145,10 @@ Error message and password prompt
 
 <li>$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/superscript</li>
 
+<li>$:/config/Navigation/UpdateAddressBar</li>
+
+<li>$:/config/Navigation/UpdateHistory</li>
+
 <li>$:/config/NewJournal/Title</li>
 
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/close-all</li>
@@ -164,6 +168,8 @@ Error message and password prompt
 <li>$:/config/PageControlButtons/Visibility/$:/core/ui/Buttons/theme</li>
 
 <li>$:/config/RelinkOnRename</li>
+
+<li>$:/config/Tiddlers/TitleLinks</li>
 
 <li>$:/config/TimestampDisable</li>
 
@@ -195,11 +201,27 @@ Error message and password prompt
 
 <li>$:/isEncrypted</li>
 
+<li>$:/layout</li>
+
 <li>$:/palette</li>
 
 <li>$:/SiteSubtitle</li>
 
 <li>$:/SiteTitle</li>
+
+<li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/async</li>
+
+<li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/browser-storage</li>
+
+<li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/codemirror</li>
+
+<li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/comments</li>
+
+<li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/consent-banner</li>
+
+<li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/sax</li>
+
+<li>$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/themes/tiddlywiki/centralised</li>
 
 <li>$:/state/edit/references--247287909</li>
 
@@ -211,9 +233,15 @@ Error message and password prompt
 
 <li>$:/state/ShowPaletteEditor</li>
 
+<li>$:/state/tab--1418380610</li>
+
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
+
+<li>$:/state/tab--86143343</li>
+
+<li>$:/state/tab--959111941</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -261,6 +289,8 @@ Error message and password prompt
 
 <li>$:/themes/tiddlywiki/vanilla</li>
 
+<li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
+
 <li>$:/themes/tiddlywiki/vanilla/options/stickytitles</li>
 
 <li>$:/view</li>
@@ -299,6 +329,12 @@ Error message and password prompt
 <div created="20210314002016218" modified="20210314002016218" title="$:/config/EditorToolbarButtons/Visibility/$:/core/ui/EditorToolbar/superscript">
 <pre>hide</pre>
 </div>
+<div created="20210316035627840" creator="dpongimo" modified="20210316035627840" modifier="dpongimo" title="$:/config/Navigation/UpdateAddressBar">
+<pre>permalink</pre>
+</div>
+<div created="20210316035632179" creator="dpongimo" modified="20210316035632179" modifier="dpongimo" title="$:/config/Navigation/UpdateHistory">
+<pre>yes</pre>
+</div>
 <div created="20210314001912261" modified="20210314001916518" title="$:/config/NewJournal/Title">
 <pre>YYYYYYYY MMM DDth </pre>
 </div>
@@ -327,6 +363,9 @@ Error message and password prompt
 <pre>hide</pre>
 </div>
 <div created="20210314002158564" modified="20210314002158564" title="$:/config/RelinkOnRename">
+<pre>yes</pre>
+</div>
+<div created="20210316035642073" creator="dpongimo" modified="20210316035642073" modifier="dpongimo" title="$:/config/Tiddlers/TitleLinks">
 <pre>yes</pre>
 </div>
 <div created="20210314002856733" modified="20210314002856733" title="$:/config/TimestampDisable">
@@ -10237,6 +10276,9 @@ Error message and password prompt
 <div title="$:/isEncrypted">
 <pre>no</pre>
 </div>
+<div created="20210316035521527" creator="dpongimo" modified="20210316035521527" modifier="dpongimo" title="$:/layout">
+<pre>$:/core/ui/PageTemplate</pre>
+</div>
 <div created="20210314002334076" modified="20210314002342647" title="$:/palette">
 <pre>$:/palettes/Twilight</pre>
 </div>
@@ -10245,6 +10287,27 @@ Error message and password prompt
 </div>
 <div created="20210314001100096" modified="20210314013429553" title="$:/SiteTitle">
 <pre>dreamy dungeon</pre>
+</div>
+<div created="20210316035717048" creator="dpongimo" modified="20210316035718971" modifier="dpongimo" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/async">
+<pre>no</pre>
+</div>
+<div created="20210316035725675" creator="dpongimo" modified="20210316035734351" modifier="dpongimo" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/browser-storage">
+<pre>no</pre>
+</div>
+<div created="20210316035738583" creator="dpongimo" modified="20210316035746598" modifier="dpongimo" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/codemirror">
+<pre>no</pre>
+</div>
+<div created="20210316035748671" creator="dpongimo" modified="20210316035757081" modifier="dpongimo" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/comments">
+<pre>no</pre>
+</div>
+<div created="20210316035759135" creator="dpongimo" modified="20210316035759799" modifier="dpongimo" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/consent-banner">
+<pre>no</pre>
+</div>
+<div created="20210316035825035" creator="dpongimo" modified="20210316035826353" modifier="dpongimo" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/plugins/tiddlywiki/sax">
+<pre>no</pre>
+</div>
+<div created="20210316035847606" creator="dpongimo" modified="20210316035852551" modifier="dpongimo" title="$:/state/add-plugin-info/$:/temp/ServerConnection/https://tiddlywiki.com/library/v5.1.23/index.html/$:/temp/RemoteAssetInfo/https://tiddlywiki.com/library/v5.1.23/index.html/$:/themes/tiddlywiki/centralised">
+<pre>no</pre>
 </div>
 <div created="20210314012457924" modified="20210314012458542" title="$:/state/edit/references--247287909">
 <pre>hide</pre>
@@ -10261,17 +10324,26 @@ Error message and password prompt
 <div created="20210314010029232" modified="20210314010048073" title="$:/state/ShowPaletteEditor">
 <pre>no</pre>
 </div>
-<div created="20210314001932595" modified="20210314010056775" title="$:/state/tab--1963855381">
+<div created="20210316035845464" creator="dpongimo" modified="20210316035845464" modifier="dpongimo" title="$:/state/tab--1418380610">
+<pre>$:/core/ui/ControlPanel/Plugins/Add/Themes</pre>
+</div>
+<div created="20210314001932595" creator="dpongimo" modified="20210316035522019" modifier="dpongimo" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20210314001923135" modified="20210314012256914" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Basics</pre>
+<div created="20210314001923135" creator="dpongimo" modified="20210316035501953" modifier="dpongimo" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Advanced</pre>
 </div>
-<div created="20210314001123268" creator="dpongimo" modified="20210314014345697" modifier="dpongimo" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Saving</pre>
+<div created="20210316035840303" creator="dpongimo" modified="20210316035842567" modifier="dpongimo" title="$:/state/tab--86143343">
+<pre>$:/core/ui/ControlPanel/Plugins/Installed/Plugins</pre>
 </div>
-<div created="20210314001126171" creator="dpongimo" modified="20210314014454679" modifier="dpongimo" title="$:/state/tab-2065006209">
-<pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
+<div created="20210316035503149" creator="dpongimo" modified="20210316035507925" modifier="dpongimo" title="$:/state/tab--959111941">
+<pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
+</div>
+<div created="20210314001123268" creator="dpongimo" modified="20210316035709519" modifier="dpongimo" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Plugins</pre>
+</div>
+<div created="20210314001126171" creator="dpongimo" modified="20210316035704031" modifier="dpongimo" title="$:/state/tab-2065006209">
+<pre>$:/core/ui/ControlPanel/Saving/Gitea</pre>
 </div>
 <div created="20210314002921816" modified="20210314012411570" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Orphans</pre>
@@ -10279,8 +10351,8 @@ Error message and password prompt
 <div created="20210314001939532" creator="dpongimo" modified="20210314014341843" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Tools</pre>
 </div>
-<div created="20210314001934197" modified="20210314005941648" title="$:/state/tabs/controlpanel/toolbars-1345989671">
-<pre>$:/core/ui/ControlPanel/Toolbars/ViewToolbar</pre>
+<div created="20210314001934197" creator="dpongimo" modified="20210316035518150" modifier="dpongimo" title="$:/state/tabs/controlpanel/toolbars-1345989671">
+<pre>$:/core/ui/ControlPanel/Toolbars/EditToolbar</pre>
 </div>
 <div created="20210314011019817" modified="20210314011020648" title="$:/state/tree/$:/boot/">
 <pre>hide</pre>
@@ -10324,7 +10396,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210314013834230" creator="dpongimo" list="$:/ControlPanel Overview dungeons [[NSFW Warning]]" modified="20210314014344104" modifier="dpongimo" title="$:/StoryList">
+<div created="20210316035447224" creator="dpongimo" list="$:/ControlPanel [[NSFW Warning]] dpongimo" modified="20210316035453630" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10438,6 +10510,9 @@ Error message and password prompt
         }
     }
 }</pre>
+</div>
+<div created="20210316035533502" creator="dpongimo" modified="20210316035533502" modifier="dpongimo" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
+<pre>fluid-fixed</pre>
 </div>
 <div created="20210314005923716" modified="20210314005923716" title="$:/themes/tiddlywiki/vanilla/options/stickytitles">
 <pre>yes</pre>
