Saved by TiddlyWiki

--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -10510,26 +10510,8 @@ Dungeon Lord is a fabulous contemporary erotic dungeon management game that effe
 Devoted worshipers may enter into contracts with gods to become [[dungeon lords]] and manage these dungeons.
 </pre>
 </div>
-<div created="20210316040146387" creator="dpongimo" modified="20210316041919629" modifier="dpongimo" tags="meta" title="Inspiration" type="text/vnd.tiddlywiki">
-<pre>!! [[Dungeon Lord 1.0|https://f95zone.to/threads/dungeon-lord-v1-0-dungeon-gaming.53534/]]
-
-By Dungeon Gaming
-
-Dungeon Lord is a fabulous contemporary erotic dungeon management game that effectively captures the genre at a high level. The game is built using Twine and [[SugarCube|https://www.motoslave.net/sugarcube/]] which gives the game native support for full game state saving at any point. The game is also entirely turn based where each step of the game is fully paused until the player makes a decision or advances the scene.
-
-[[Dungeon Lord 2.0 (WIP)|https://f95zone.to/threads/dungeon-lord-a-new-beginning-v0-1-2-dungeon-gaming.75431/]] builds on this with a revamped user interface and additional upgrade paths.
-
-
-!!! Strengths
-* Robust fetish simulation where NPC sexual preferences affect how different player actions affect them. This is fleshed out further in the sequel where certain combinations of fetishes and status effects can result in unique outcomes.
-* Modular mechanic design which allows for future NPC types, fetishes, status effects, and upgrades to slot into the existing game mechanics
-* Full save state support
-* Mod support for adding new character images and gifs
-
-!!! Weaknesses
-* Randomness is client side so save-scumming can result in different randomness results.
-* Event artwork is limited to image and gifs embedded in text
-</pre>
+<div created="20210316040146387" creator="dpongimo" modified="20210316042035050" modifier="dpongimo" tags="meta" title="Inspiration" type="text/vnd.tiddlywiki">
+<pre>{{Dungeon Lord}}</pre>
 </div>
 <div created="20210314001736999" modified="20210314004612264" tags="[[open source]] abandoned" title="miia-web" type="text/vnd.tiddlywiki">
 <pre>Miia Web was an browser based client for the [[Hydrus Network Client|https://hydrusnetwork.github.io/hydrus/]]. 
