Saved by TiddlyWiki

--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -291,6 +291,8 @@ Error message and password prompt
 
 <li>Overview</li>
 
+<li>Trap Quest</li>
+
 </ul>
 </p>
 
@@ -10345,7 +10347,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210316035936518" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration" modified="20210316040133573" modifier="dpongimo" title="$:/StoryList">
+<div created="20210316035936518" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration [[Dungeon Lord]] [[Trap Quest]]" modified="20210316042749735" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10541,6 +10543,15 @@ Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another prog
 <pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon. Dreamy Dungeon is [[inspired|inspiration]] by many previous games.
 
 The [[player]] assumes the role of an unwitting human summoned by a [[god of lust]] into a fantasy world of adventurers and [[dungeons]].</pre>
+</div>
+<div created="20210316042511538" creator="dpongimo" modified="20210316043456214" modifier="dpongimo" tags="inspiration" title="Trap Quest">
+<pre>!! [[Trap Quest|https://trapquest.com]]
+
+By Aika (and others)
+
+Trap Quest is a long running dungeon crawler where the player is subject to a wide range of traps, transformations, and cursed loot.
+
+The game is built using an interactive story format called [[Glulxe|http://www.davidkinder.co.uk/glulxe.html]] which can be run using Win Git (not the source control). Glulxe inherits directly from many early text adventure tools and games and primarily uses verb text input as the primary control mechanism. Trap Quest includes some basic graphical buttons which automate writing out commands like `inventory` and `drink green potion`, but all game interactions must be routed through text actions. </pre>
 </div>
 
 
