Saved by TiddlyWiki

--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -213,6 +213,8 @@ Error message and password prompt
 
 <li>$:/state/Link/-87203796/search</li>
 
+<li>$:/state/peek-stylesheets/mode/--994748944</li>
+
 <li>$:/state/showeditpreview</li>
 
 <li>$:/state/ShowPaletteEditor</li>
@@ -220,6 +222,8 @@ Error message and password prompt
 <li>$:/state/tab--1963855381</li>
 
 <li>$:/state/tab--2112689675</li>
+
+<li>$:/state/tab--959111941</li>
 
 <li>$:/state/tab-1749438307</li>
 
@@ -266,6 +270,14 @@ Error message and password prompt
 <li>$:/themes/tiddlywiki/snowwhite</li>
 
 <li>$:/themes/tiddlywiki/vanilla</li>
+
+<li>$:/themes/tiddlywiki/vanilla/metrics/bodyfontsize</li>
+
+<li>$:/themes/tiddlywiki/vanilla/metrics/bodylineheight</li>
+
+<li>$:/themes/tiddlywiki/vanilla/metrics/fontsize</li>
+
+<li>$:/themes/tiddlywiki/vanilla/metrics/lineheight</li>
 
 <li>$:/themes/tiddlywiki/vanilla/options/sidebarlayout</li>
 
@@ -10278,20 +10290,26 @@ Error message and password prompt
 <div created="20210314004018200" modified="20210314004020590" title="$:/state/Link/-87203796/search">
 <pre></pre>
 </div>
+<div created="20210316043642625" creator="dpongimo" modified="20210316043644162" modifier="dpongimo" title="$:/state/peek-stylesheets/mode/--994748944">
+<pre>restored</pre>
+</div>
 <div created="20210314002548383" creator="dpongimo" modified="20210316040454293" modifier="dpongimo" title="$:/state/showeditpreview">
 <pre>yes</pre>
 </div>
 <div created="20210314010029232" modified="20210314010048073" title="$:/state/ShowPaletteEditor">
 <pre>no</pre>
 </div>
-<div created="20210314001932595" creator="dpongimo" modified="20210316040107478" modifier="dpongimo" title="$:/state/tab--1963855381">
-<pre>$:/core/ui/ControlPanel/Palette</pre>
+<div created="20210314001932595" creator="dpongimo" modified="20210316043710430" modifier="dpongimo" title="$:/state/tab--1963855381">
+<pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
 </div>
-<div created="20210314001923135" modified="20210314012256914" title="$:/state/tab--2112689675">
-<pre>$:/core/ui/ControlPanel/Basics</pre>
+<div created="20210314001923135" creator="dpongimo" modified="20210316043636361" modifier="dpongimo" title="$:/state/tab--2112689675">
+<pre>$:/core/ui/ControlPanel/Advanced</pre>
 </div>
-<div created="20210314001123268" creator="dpongimo" modified="20210316040111196" modifier="dpongimo" title="$:/state/tab-1749438307">
-<pre>$:/core/ui/ControlPanel/Info</pre>
+<div created="20210316043637354" creator="dpongimo" modified="20210316043648444" modifier="dpongimo" title="$:/state/tab--959111941">
+<pre>$:/core/ui/ControlPanel/TiddlerFields</pre>
+</div>
+<div created="20210314001123268" creator="dpongimo" modified="20210316043708610" modifier="dpongimo" title="$:/state/tab-1749438307">
+<pre>$:/core/ui/ControlPanel/Appearance</pre>
 </div>
 <div created="20210314001126171" creator="dpongimo" modified="20210314014454679" modifier="dpongimo" title="$:/state/tab-2065006209">
 <pre>$:/core/ui/ControlPanel/Saving/DownloadSaver</pre>
@@ -10299,7 +10317,7 @@ Error message and password prompt
 <div created="20210314002921816" modified="20210314012411570" title="$:/state/tab/moresidebar-1850697562">
 <pre>$:/core/ui/MoreSideBar/Orphans</pre>
 </div>
-<div created="20210314001939532" creator="dpongimo" modified="20210316042043717" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
+<div created="20210314001939532" creator="dpongimo" modified="20210316043905542" modifier="dpongimo" title="$:/state/tab/sidebar--595412856">
 <pre>$:/core/ui/SideBar/Open</pre>
 </div>
 <div created="20210314001934197" modified="20210314005941648" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -10347,7 +10365,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210316035936518" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration [[Dungeon Lord]] [[Trap Quest]]" modified="20210316042749735" modifier="dpongimo" title="$:/StoryList">
+<div created="20210316035936518" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration [[Dungeon Lord]] [[Trap Quest]]" modified="20210316043618259" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10462,6 +10480,18 @@ Error message and password prompt
     }
 }</pre>
 </div>
+<div created="20210316043806835" creator="dpongimo" modified="20210316043806835" modifier="dpongimo" title="$:/themes/tiddlywiki/vanilla/metrics/bodyfontsize">
+<pre>18px</pre>
+</div>
+<div created="20210316043821354" creator="dpongimo" modified="20210316043825569" modifier="dpongimo" title="$:/themes/tiddlywiki/vanilla/metrics/bodylineheight">
+<pre>24px</pre>
+</div>
+<div created="20210316043718349" creator="dpongimo" modified="20210316043810322" modifier="dpongimo" title="$:/themes/tiddlywiki/vanilla/metrics/fontsize">
+<pre>16px</pre>
+</div>
+<div created="20210316043757667" creator="dpongimo" modified="20210316043802411" modifier="dpongimo" title="$:/themes/tiddlywiki/vanilla/metrics/lineheight">
+<pre>24px</pre>
+</div>
 <div created="20210316040057794" creator="dpongimo" modified="20210316040057794" modifier="dpongimo" title="$:/themes/tiddlywiki/vanilla/options/sidebarlayout">
 <pre>fluid-fixed</pre>
 </div>
@@ -10539,8 +10569,10 @@ Development ceased in 2021 once [[hydrus-app|https://hydrus.app/]], another prog
 
 [[I am an adult|Dreamy Dungeon]]</pre>
 </div>
-<div created="20210314012630418" creator="dpongimo" modified="20210314014717039" modifier="dpongimo" title="Overview">
-<pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon. Dreamy Dungeon is [[inspired|inspiration]] by many previous games.
+<div created="20210314012630418" creator="dpongimo" modified="20210316043907128" modifier="dpongimo" title="Overview">
+<pre>[[Dreamy Dungeon]] is an upcoming erotic management game tasking the player with designing a successful trapped sex dungeon. Dreamy Dungeon is [[inspired|Inspiration]] by many previous games.
+
+{{Inspiration}}
 
 The [[player]] assumes the role of an unwitting human summoned by a [[god of lust]] into a fantasy world of adventurers and [[dungeons]].</pre>
 </div>
