Saved by TiddlyWiki

--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -295,6 +295,8 @@ Error message and password prompt
 
 <li>dungeons</li>
 
+<li>Erotic Trap Dungeon</li>
+
 <li>Inspiration</li>
 
 <li>miia-web</li>
@@ -10301,8 +10303,8 @@ Error message and password prompt
 <div created="20210314010029232" modified="20210314010048073" title="$:/state/ShowPaletteEditor">
 <pre>no</pre>
 </div>
-<div created="20210316212002426" creator="dpongimo" modified="20210316213330803" modifier="dpongimo" title="$:/state/sidebar">
-<pre>no</pre>
+<div created="20210316212002426" creator="dpongimo" modified="20210316220821156" modifier="dpongimo" title="$:/state/sidebar">
+<pre>yes</pre>
 </div>
 <div created="20210314001932595" creator="dpongimo" modified="20210316043710430" modifier="dpongimo" title="$:/state/tab--1963855381">
 <pre>$:/themes/tiddlywiki/vanilla/themetweaks</pre>
@@ -10370,7 +10372,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210316213245496" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview [[Trap Quest]]" modified="20210316213439376" modifier="dpongimo" title="$:/StoryList">
+<div created="20210316213245496" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview [[Erotic Trap Dungeon]] [[Trap Quest]]" modified="20210316214957375" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10546,6 +10548,26 @@ Dungeon Lord is a fabulous contemporary erotic dungeon management game that effe
 <pre>Dungeons are sprawling complexes created by humans in service of [[gods]] to be plundered by [[adventurers]]. Adventurers are attracted by dungeons for fame and fortune and are willing to endure incredible hardships to retrieve the loot deep within dungeons. Dungeons typically contain traps and monsters which adventurers defeat to gain experience.
 Devoted worshipers may enter into contracts with gods to become [[dungeon lords]] and manage these dungeons.
 </pre>
+</div>
+<div created="20210316215002484" creator="dpongimo" modified="20210316220836831" modifier="dpongimo" tags="inspiration" title="Erotic Trap Dungeon" type="text/vnd.tiddlywiki">
+<pre>!! Erotic Trap Dungeon
+
+Erotic Trap Dungeon is an RPG Maker game where the player is tasked with beating a massive dungeon filled with enemies and traps which arouse the player and damage the player's stamina.
+
+Erotic Trap Dungeon sets an overarching goal of escaping the hundred floor dungeon. The dungeon is filled with traps and enemies which damage the player's stamina, increase lust, and apply various status effects. When the player runs out of stamina, they respawn back at their home base with any treasure they managed collect. From their home base, they can purchase consumable potions as well as new kinds of armor which act as &quot;sexy&quot; rewards that also improve stats.
+
+Built in RPG Maker, Erotic Trap Dungeon inherits the realtime tile-based movement, but doesn't include the turn based battle system. This turns each floor of the dungeon into a puzzle of traps, treasure chests, and environmental hazards which can damage enemies. Traps are hidden throughout each floor and can only be revealed by either stepping on them or using items or activating buttons which reveal them. Traps increase the player's arousal and apply status effects like slower movement or aphrodisiacs which increase the effectiveness of arousal attacks.
+
+Erotic Trap Dungeon also keeps track of other erotic stats for piss and scat play which can only be partially disabled. Drinking potions increases the player's bladder fullness which requires the player to either use a portable toilet or risk any potentially trapped toilets in the level. Basic bondage is also provided through cursed costumes which can be applied by traps and only removed by special items or risking potentially trapped mirrors on the level. 
+
+!!! Strengths
+* Great fetish mechanics where each player decision can have compounding effects
+* Every action, trap, and costume has associated cut-in images which greatly add to the erotic atmosphere
+* Replayability is built into the game as each run provides currency and items which both strengthens the player and provide eye candy to the user
+* Lightweight story provides enough world building to prevent any major gaps, but allows the player to stay playing the game
+
+!!! Weaknesses
+* Heavy reliance on RPG Maker tilesets gives the game environments a generic atmosphere</pre>
 </div>
 <div created="20210316040146387" creator="dpongimo" modified="20210316042457758" modifier="dpongimo" tags="meta" title="Inspiration" type="text/vnd.tiddlywiki">
 <pre>* [[Dungeon Lord]]
