Saved by TiddlyWiki

--- a/dreamy-dungeon/index.html
+++ b/dreamy-dungeon/index.html
@@ -10374,7 +10374,7 @@ Error message and password prompt
 <div created="20210314013505176" creator="d" modified="20210314013506623" modifier="dpongim" title="$:/status/UserName">
 <pre>dpongimo</pre>
 </div>
-<div created="20210317032854450" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration [[Whorelock's Revenge]]" modified="20210317032923433" modifier="dpongimo" title="$:/StoryList">
+<div created="20210317032854450" creator="dpongimo" list="[[NSFW Warning]] [[Dreamy Dungeon]] Overview Inspiration [[Erotic Trap Dungeon]] [[Whorelock's Revenge]]" modified="20210317033327714" modifier="dpongimo" title="$:/StoryList">
 <pre></pre>
 </div>
 <div created="20210314001928012" modified="20210314001930640" title="$:/theme">
@@ -10551,10 +10551,10 @@ Dungeon Lord is a fabulous contemporary erotic dungeon management game that effe
 Devoted worshipers may enter into contracts with gods to become [[dungeon lords]] and manage these dungeons.
 </pre>
 </div>
-<div created="20210316215002484" creator="dpongimo" modified="20210316220836831" modifier="dpongimo" tags="inspiration" title="Erotic Trap Dungeon" type="text/vnd.tiddlywiki">
-<pre>!! Erotic Trap Dungeon
+<div created="20210316215002484" creator="dpongimo" modified="20210317033818352" modifier="dpongimo" tags="inspiration" title="Erotic Trap Dungeon" type="text/vnd.tiddlywiki">
+<pre>!! Erotic Trap Dungeon 2
 
-Erotic Trap Dungeon is an RPG Maker game where the player is tasked with beating a massive dungeon filled with enemies and traps which arouse the player and damage the player's stamina.
+Erotic Trap Dungeon is an RPG Maker game where the player is tasked with beating a massive dungeon filled with enemies and traps which arouse the player and damage the player's stamina. It's sequel fleshes out the mechanics from the first and feels more like the final version of the game.
 
 Erotic Trap Dungeon sets an overarching goal of escaping the hundred floor dungeon. The dungeon is filled with traps and enemies which damage the player's stamina, increase lust, and apply various status effects. When the player runs out of stamina, they respawn back at their home base with any treasure they managed collect. From their home base, they can purchase consumable potions as well as new kinds of armor which act as &quot;sexy&quot; rewards that also improve stats.
 
@@ -10565,11 +10565,14 @@ Erotic Trap Dungeon also keeps track of other erotic stats for piss and scat pla
 !!! Strengths
 * Great fetish mechanics where each player decision can have compounding effects
 * Every action, trap, and costume has associated cut-in images which greatly add to the erotic atmosphere
-* Replayability is built into the game as each run provides currency and items which both strengthens the player and provide eye candy to the user
-* Lightweight story provides enough world building to prevent any major gaps, but allows the player to stay playing the game
+* Replay-ability is built into the game as each run provides currency and items which both strengthens the player and provide eye candy to the user
+
 
 !!! Weaknesses
-* Heavy reliance on RPG Maker tilesets gives the game environments a generic atmosphere</pre>
+* Heavy reliance on RPG Maker tilesets gives the game environments a generic atmosphere
+* Reliance on &quot;DDR&quot;-style quicktime events to escape traps and enemies gets repetitive quickly and feels disconnected from the atmosphere of the game
+* Hidden traps act as a random source of difficulty spikes
+</pre>
 </div>
 <div created="20210316040146387" creator="dpongimo" modified="20210317032913584" modifier="dpongimo" tags="meta" title="Inspiration" type="text/vnd.tiddlywiki">
 <pre>* [[Dungeon Lord]]
